--- a/render.yaml
+++ b/render.yaml
@@ -14,12 +14,12 @@ services:
       - key: DB_CONNECTION
         value: pgsql
       - key: DB_HOST
-        fromDatabase: postgres
+        sync: false
       - key: DB_PORT
         value: 5432
       - key: DB_DATABASE
-        fromDatabase: postgres
+        sync: false
       - key: DB_USERNAME
-        fromDatabase: postgres
+        sync: false
       - key: DB_PASSWORD
-        fromDatabase: postgres
+        sync: false
