--- a/render.yaml
+++ b/render.yaml
@@ -14,12 +14,12 @@ services:
       - key: DB_CONNECTION
         value: pgsql
       - key: DB_HOST
-        sync: false
+        fromDatabase: postgres
       - key: DB_PORT
         value: 5432
       - key: DB_DATABASE
-        sync: false
+        fromDatabase: postgres
       - key: DB_USERNAME
-        sync: false
+        fromDatabase: postgres
       - key: DB_PASSWORD
-        sync: false
+        fromDatabase: postgres
